[project]
name = "VKRiez-Edge"
description = "A collection of advanced edge detection nodes for ComfyUI that generate high-quality edge maps / contours for usage with ControlNet Canny / Anyline guidance."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vadimcro/VKRiez-Edge"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "@vkriez"
DisplayName = "VKRiez-Edge"
Icon = ""
